Style fix- overlap in mobile view

--- a/style.css
+++ b/style.css
@@ -114,5 +114,5 @@ color:aliceblue;
 }
 .vidArtif{
     width:100%;
-    height:100%;
+    height:auto;
 }
